sensor-module/build/log/idf_py_stdout_output_6364
Command: ninja all
[1/14] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
C:\Espressif\tools\xtensa-esp-elf\esp-15.2.0_20251204\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v6.0.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Dev/Projects/ESP32/temp-humid-mesh/sensor-module/build/config -IC:/Dev/Projects/ESP32/temp-humid-mesh/sensor-module/main -IC:/esp/v6.0.1/esp-idf/components/esp_libc/platform_include -IC:/esp/v6.0.1/esp-idf/components/freertos/config/include -IC:/esp/v6.0.1/esp-idf/components/freertos/config/include/freertos -IC:/esp/v6.0.1/esp-idf/components/freertos/config/xtensa/include -IC:/esp/v6.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/v6.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp/v6.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/esp/v6.0.1/esp-idf/components/freertos/esp_additions/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/include/soc -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/ldo/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/debug_probe/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/etm/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/power_supply/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/modem/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/port/esp32/. -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/port/esp32/include -IC:/esp/v6.0.1/esp-idf/components/heap/include -IC:/esp/v6.0.1/esp-idf/components/heap/tlsf -IC:/esp/v6.0.1/esp-idf/components/log/include -IC:/esp/v6.0.1/esp-idf/components/soc/include -IC:/esp/v6.0.1/esp-idf/components/soc/esp32 -IC:/esp/v6.0.1/esp-idf/components/soc/esp32/include -IC:/esp/v6.0.1/esp-idf/components/soc/esp32/register -IC:/esp/v6.0.1/esp-idf/components/hal/platform_port/include -IC:/esp/v6.0.1/esp-idf/components/hal/esp32/include -IC:/esp/v6.0.1/esp-idf/components/hal/include -IC:/esp/v6.0.1/esp-idf/components/esp_rom/include -IC:/esp/v6.0.1/esp-idf/components/esp_rom/esp32/include -IC:/esp/v6.0.1/esp-idf/components/esp_rom/esp32/include/esp32 -IC:/esp/v6.0.1/esp-idf/components/esp_rom/esp32 -IC:/esp/v6.0.1/esp-idf/components/esp_common/include -IC:/esp/v6.0.1/esp-idf/components/esp_system/include -IC:/esp/v6.0.1/esp-idf/components/esp_system/port/soc -IC:/esp/v6.0.1/esp-idf/components/esp_system/port/include/private -IC:/esp/v6.0.1/esp-idf/components/esp_stdio/include -IC:/esp/v6.0.1/esp-idf/components/xtensa/esp32/include -IC:/esp/v6.0.1/esp-idf/components/xtensa/include -IC:/esp/v6.0.1/esp-idf/components/xtensa/deprecated_include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_gpio/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_gpio/esp32/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_usb/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_pmu/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_pmu/esp32/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_ana_conv/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_ana_conv/esp32/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_dma/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_i2s/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_i2s/esp32/include -IC:/esp/v6.0.1/esp-idf/components/lwip/include -IC:/esp/v6.0.1/esp-idf/components/lwip/include/apps -IC:/esp/v6.0.1/esp-idf/components/lwip/lwip/src/include -IC:/esp/v6.0.1/esp-idf/components/lwip/port/include -IC:/esp/v6.0.1/esp-idf/components/lwip/port/freertos/include -IC:/esp/v6.0.1/esp-idf/components/lwip/port/esp32xx/include -IC:/esp/v6.0.1/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/esp/v6.0.1/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Dev/Projects/ESP32/temp-humid-mesh/sensor-module/components/network -IC:/Dev/Projects/ESP32/temp-humid-mesh/common -IC:/esp/v6.0.1/esp-idf/components/esp_wifi/include -IC:/esp/v6.0.1/esp-idf/components/esp_wifi/include/local -IC:/esp/v6.0.1/esp-idf/components/esp_wifi/wifi_apps/include -IC:/esp/v6.0.1/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -IC:/esp/v6.0.1/esp-idf/components/esp_event/include -IC:/esp/v6.0.1/esp-idf/components/esp_phy/include -IC:/esp/v6.0.1/esp-idf/components/esp_phy/esp32/include -IC:/esp/v6.0.1/esp-idf/components/esp_netif/include -IC:/esp/v6.0.1/esp-idf/components/nvs_flash/include -IC:/esp/v6.0.1/esp-idf/components/esp_partition/include -IC:/esp/v6.0.1/esp-idf/components/esp_blockdev/include -IC:/Dev/Projects/ESP32/temp-humid-mesh/sensor-module/components/sensor -IC:/Dev/Projects/ESP32/temp-humid-mesh/sensor-module/managed_components/esp-idf-lib__sht4x -IC:/Dev/Projects/ESP32/temp-humid-mesh/sensor-module/managed_components/esp-idf-lib__i2cdev -IC:/Dev/Projects/ESP32/temp-humid-mesh/sensor-module/managed_components/esp-idf-lib__esp_idf_lib_helpers -IC:/esp/v6.0.1/esp-idf/components/esp_driver_gpio/include -IC:/esp/v6.0.1/esp-idf/components/esp_driver_i2c/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_i2c/esp32/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_i2c/include -IC:/esp/v6.0.1/esp-idf/components/esp_timer/include @"C:/Dev/Projects/ESP32/temp-humid-mesh/sensor-module/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Dev/Projects/ESP32/temp-humid-mesh/sensor-module=. -fmacro-prefix-map=C:/esp/v6.0.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c C:/Dev/Projects/ESP32/temp-humid-mesh/sensor-module/main/main.c
In file included from C:/Dev/Projects/ESP32/temp-humid-mesh/sensor-module/main/main.c:1:
C:/Dev/Projects/ESP32/temp-humid-mesh/sensor-module/components/sensor/sensor.h:9:1: error: unknown type name 'esp_err_t'
    9 | esp_err_t sensor_init(void);
      | ^~~~~~~~~
In file included from C:/Dev/Projects/ESP32/temp-humid-mesh/sensor-module/main/main.c:3:
C:/Dev/Projects/ESP32/temp-humid-mesh/sensor-module/components/network/network.h:9:1: error: unknown type name 'esp_err_t'
    9 | esp_err_t network_init(void);
      | ^~~~~~~~~
C:/Dev/Projects/ESP32/temp-humid-mesh/sensor-module/main/main.c: In function 'app_main':
C:/Dev/Projects/ESP32/temp-humid-mesh/sensor-module/main/main.c:9:5: error: implicit declaration of function 'xTaskCreate' [-Wimplicit-function-declaration]
    9 |     xTaskCreate(sensor_task, "sensor_task", 4096, NULL, 5, NULL);
      |     ^~~~~~~~~~~
C:/Dev/Projects/ESP32/temp-humid-mesh/sensor-module/main/main.c:9:51: error: 'NULL' undeclared (first use in this function)
    9 |     xTaskCreate(sensor_task, "sensor_task", 4096, NULL, 5, NULL);
      |                                                   ^~~~
C:/Dev/Projects/ESP32/temp-humid-mesh/sensor-module/main/main.c:4:1: note: 'NULL' is defined in header '<stddef.h>'; this is probably fixable by adding '#include <stddef.h>'
    3 | #include "network.h"
  +++ |+#include <stddef.h>
    4 | 
C:/Dev/Projects/ESP32/temp-humid-mesh/sensor-module/main/main.c:9:51: note: each undeclared identifier is reported only once for each function it appears in
    9 |     xTaskCreate(sensor_task, "sensor_task", 4096, NULL, 5, NULL);
      |                                                   ^~~~
[2/14] Building C object esp-idf/sensor/CMakeFiles/__idf_sensor.dir/sensor.c.obj
[3/14] Building C object esp-idf/network/CMakeFiles/__idf_network.dir/network.c.obj
[4/14] Performing build step for 'bootloader'
[1/1] C:\Windows\system32\cmd.exe /C "cd /D C:\Dev\Projects\ESP32\temp-humid-mesh\sensor-module\build\bootloader && C:\Espressif\tools\python\v6.0.1\venv\Scripts\python.exe C:/esp/v6.0.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Dev/Projects/ESP32/temp-humid-mesh/sensor-module/build/bootloader/bootloader.bin"
Bootloader binary size 0x6610 bytes. 0x9f0 bytes (9%) free.
ninja: build stopped: subcommand failed.
